Updated Dashboard and squashed bugs

--- a/src/app/dashboard/pin-dialog/pin-dialog.component.scss
+++ b/src/app/dashboard/pin-dialog/pin-dialog.component.scss
@@ -5,6 +5,8 @@
 }
 .mat-mdc-dialog-title {
   font-size: 18px;
+
+  max-width: 90%;
 }
 .header-container {
   display: flex;
